Migrate old blog posts to v6.2.2 theme

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -87,6 +87,10 @@
 
   <!-- JavaScript -->
 
+  {% if page.openseadragon %}
+  <script src="{{ site.data.origin[type].openseadragon.js | relative_url }}"></script>
+  {% endif %}
+
   {% unless site.theme_mode %}
     {% include mode-toggle.html %}
   {% endunless %}
