--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,7 +48,7 @@ layout: default
             {% capture lqip %}lqip="{{ post.image.lqip }}"{% endcapture %}
           {% endif %}
 
-          {% assign src = post.image.path | default: post.image %}
+          {% assign src = post.image.thumb | default: post.image %}
           {% unless src contains '//' %}
             {% assign src = post.img_path | append: '/' | append: src | replace: '//', '/' %}
           {% endunless %}
