--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,17 +43,17 @@ layout: default
   {% for post in posts %}
     <article class="card-wrapper">
       <a href="{{ post.url | relative_url }}" class="card post-preview flex-md-row-reverse">
-        {% if post.image %}
-          {% if post.image.lqip %}
-            {% capture lqip %}lqip="{{ post.image.lqip }}"{% endcapture %}
+        {% if post.thumb %}
+          {% if post.thumb.lqip %}
+            {% capture lqip %}lqip="{{ post.thumb.lqip }}"{% endcapture %}
           {% endif %}
 
-          {% assign src = post.image.thumb | default: post.image %}
+          {% assign src = post.thumb.path | default: post.thumb %}
           {% unless src contains '//' %}
             {% assign src = post.img_path | append: '/' | append: src | replace: '//', '/' %}
           {% endunless %}
 
-          {% assign alt = post.image.alt | xml_escape | default: 'Preview Image' %}
+          {% assign alt = post.thumb.alt | xml_escape | default: 'Preview Image' %}
 
           <img src="{{ src }}" w="17" h="10" alt="{{ alt }}" {{ lqip }}>
         {% endif %}
