Add m33 post. Update favicons. Add caption include. Add astrobin to sidebar. Update authors. Move openseadragon css to head include. Assign openseadragon container div a unique id for the page.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -89,6 +89,15 @@
 
   {% if page.openseadragon %}
   <script src="{{ site.data.origin[type].openseadragon.js | relative_url }}"></script>
+  <style>
+    .openseadragon
+    {
+        margin: 0 auto;
+        width: 100%;
+        aspect-ratio: 3 / 2;
+        background-color: var(--main-bg);
+    }
+  </style>
   {% endif %}
 
   {% unless site.theme_mode %}
